Report the current value of the AUTO_INCREMENT counter to MySQL. (Bug #23313, Bug #21404)

ha_innobase::update_create_info(): New function, to report
the auto_increment_value.