handler/ha_innodb.cc
@@ -4770,6 +4770,20 @@ create_clustered_index_when_no_primary(
 }
 
 /*********************************************************************
+Update create_info.  Used in SHOW CREATE TABLE et al. */
+
+void
+ha_innobase::update_create_info(
+/*============================*/
+	HA_CREATE_INFO* create_info)	/* in/out: create info */
+{
+  if (!(create_info->used_fields & HA_CREATE_USED_AUTO)) {
+    ha_innobase::info(HA_STATUS_AUTO);
+    create_info->auto_increment_value = stats.auto_increment_value;
+  }
+}
+
+/*********************************************************************
 Creates a new table to an InnoDB database. */
 
 int
